# DeferredRenderer

./: CMakeLists.txt  DeferredRenderer.sln  app-info.json  externals.cmake  headers.cmake  sources.cmake
DeferredRenderer/: DeferredRenderer.vcxproj  DeferredRenderer.vcxproj.filters
DeferredRenderer/scripts/: post-build.bat
DeferredRenderer/src/: main.cpp
cmake/: add_boost.cmake  external_libs.cmake  source_files.cmake
conproc/: CMakeLists.txt  conproc.cpp  conproc.hpp  generic.cpp  generic.hpp  ignore.hpp  image.cpp  image.hpp  main.cpp  mesh.cpp  mesh.hpp  processor.cpp  processor.hpp
content/: appinfo.json
content/effects/: effect-deferred_light.json  effect-diffuse.json  effect-fxaa.json  effect-pbr.json  effect-pbr_m.json  effect-pbr_mn.json  effect-pbr_s.json  effect-pbr_sc.json  effect-pbr_sn.json  effect-pbr_snc.json  effect-terrain.json  effect-test.json  effect-unlit.json
content/materials/: brick.json  debug.json  fxaa.json  mat_barrel_01.json  mat_boardwalk_01.json  mat_boat_01.json  mat_boat_scaffold_01.json  mat_boulder_01.json  mat_bucket_01.json  mat_build_village_fence_01.json  mat_building_01.json  mat_building_01_darker.json  mat_building_02.json  mat_building_02_darker.json  mat_crane_01.json  mat_crane_02.json  mat_dragonhead_01.json  mat_dragonhead_01_darker.json  mat_fence_02.json  mat_fish_01.json  mat_foliage_01.json  mat_fx_water_01.json  mat_gate_01.json  mat_gate_02.json  mat_logpile_01.json  mat_menhir_01.json  mat_plank_01.json  mat_roofbeams_01.json  mat_rune_01.json  mat_shield_01.json  mat_shield_02.json  mat_shield_03.json  mat_skull_01.json  mat_skull_02.json  mat_strawroof_01.json  mat_strawroof_cutout_01.json  mat_sword_shovel_halberd_01.json  mat_terrain_far_01.json  mat_terrain_near_01.json  mat_terrain_near_02.json  (+8 more)
content/meshes/: build_barracks_01.fbx.opt  build_barracks_single_01.fbx.opt  build_big_storage_01.fbx.opt  build_bighouse_01.fbx.opt  build_bighouse_02.FBX.opt  build_blacksmith_01.fbx.opt  build_boat_01.FBX.opt  build_crane_01.FBX.opt  build_gate_01.fbx.opt  build_small_house_01.FBX.opt  build_small_house_straw_roof_01.FBX  build_small_house_straw_roof_01.FBX.opt  build_small_house_tall_roof_01.FBX.opt  build_storage_01.fbx.opt  build_tower_01.FBX.opt  build_wall_corner_01.FBX.opt  build_wall_panel_01.FBX.opt  cube.blend  cube.blend.opt  cube.fbx  ocean_plane.FBX.opt  prop_barrel_01.fbx.opt  prop_barrels_01.fbx.opt  prop_barrels_02.fbx.opt  prop_boardwalk_01.FBX.opt  prop_boulder_01.fbx.opt  prop_boulder_02.fbx.opt  prop_bucket_01.fbx.opt  prop_fence_01.fbx.opt  prop_fence_01_double.fbx.opt  prop_fence_02.FBX.opt  prop_fence_02_double.fbx.opt  prop_fence_02_quad.fbx.opt  prop_fish_01.fbx.opt  prop_halberd_01.fbx.opt  prop_logpile_01.fbx.opt  prop_menhir_01.fbx.opt  prop_pillar_03.fbx.opt  prop_pillar_04.fbx.opt  prop_pillar_05.fbx.opt  (+25 more)
content/scenes/: The_Viking_Village.json  scene-test.json
content/scripts/: Behaviour.lua  BounceInBox.lua  Component.lua  DayNightController.lua  DebugControls.lua  Entity.lua  FlyCamera.lua  LightSwitch.lua  LightingTest.lua  Object.lua  RandomMovement.lua  Test.lua  TestBehaviour.lua
content/textures/: build_boat_01_a.tif.json  build_boat_01_n.tif.json  build_boat_01_sg.tif.json  build_boat_02_a.tif.json  build_boat_02_n.tif.json  build_building_01_a.tif.json  build_building_01_n.tif.json  build_building_01_sg.tif.json  build_building_02_a.tif.json  build_building_02_n.tif.json  build_building_02_sg.tif.json  build_crane_01_a.tif.json  build_crane_01_n.tif.json  build_crane_02_n.tif.json  build_crane_02_n.tif.opt  build_crane_02_sg.tif.json  build_dragonhead_01_a.tif.json  build_dragonhead_01_n.tif.json  build_gate_01_a.tif.json  build_gate_01_n.tif.json  build_gate_02_a.tif.json  build_gate_02_n.tif.json  build_gate_02_n.tif.opt  build_gate_02_sg.tif.json  build_gate_02_sg.tif.opt  build_strawroofs_01_a.tif.json  build_strawroofs_01_a.tif.opt  build_strawroofs_01_n.tif.json  build_tower_01_SG.tif.json  build_tower_01_a.tif.json  build_tower_01_n.tif.json  build_tower_01_n.tif.opt  build_tower_02_a.tif.json  build_tower_02_n.tif.json  build_tower_03_a.tif.json  build_tower_03_n.tif.json  build_tower_03_n.tif.opt  build_tower_03_sg.tif.json  build_tower_03_sg.tif.opt  build_village_fence_01_a.tif.json  (+72 more)
include/: Component.hpp  DeferredRenderer.hpp  Engine.hpp  Entity.hpp  ForwardRenderEngine.hpp  RenderEngine.hpp  Scene.hpp  SceneImporter.hpp  glm.hpp  json_utils.hpp  path.hpp  typedefs.hpp  uuid.hpp
include/components/: DayNightController.hpp  FlyCamera.hpp  LightingTest.hpp
include/core/: Component.hpp  Content.hpp  Engine.hpp  Entity.hpp  Input.hpp  Scene.hpp  Transform.hpp
include/graphics/: Buffer.hpp  Camera.hpp  Effect.hpp  ForwardRenderEngine.hpp  Light.hpp  Material.hpp  Mesh.hpp  MeshRenderer.hpp  RenderEngine.hpp  RenderState.hpp  Renderable.hpp  Renderer.hpp  Shader.hpp  ShaderProgram.hpp  gl_types.hpp  render_state.hpp  shader_property.hpp
include/util/: app_info.hpp  bounds.hpp  component_registry.hpp  intersection_tests.hpp  json_initializable.hpp  json_interpreter.hpp  json_utils.hpp  keyword_helper.hpp  property_interpreter.hpp  shader_preprocessor.hpp  type_registry.hpp
scripts/: find_sources.py  msvc14.bat
src/: DeferredRenderer.cpp  Engine.cpp  Entity.cpp  ForwardRenderEngine.cpp  RenderEngine.cpp  Scene.cpp  SceneImporter.cpp  glm.hpp  guid.hpp  half.hpp  json_utils.cpp  main.cpp  types.hpp
src/components/: DayNightController.cpp  DayNightController.hpp  DebugControls.cpp  DebugControls.hpp  FlyCamera.cpp  FlyCamera.hpp  LightRandomiser.cpp  LightRandomiser.hpp  LightSwitch.cpp  LightSwitch.hpp  LightingTest.cpp  LightingTest.hpp  RandomMovement.cpp  RandomMovement.hpp
src/content/: Content.cpp  Content.hpp  Registry.cpp  Registry.hpp  pooled.cpp  pooled.hpp
src/core/: Component.cpp  Component.hpp  ComponentModule.hpp  Content.cpp  Content.hpp  Engine.cpp  Engine.hpp  Entity.cpp  Entity.hpp  Input.cpp  NamedObject.cpp  NamedObject.hpp  Object.cpp  Object.hpp  ObjectRegistry.cpp  ObjectRegistry.hpp  (+12 more)
util/: keyword_helper.hpp  rbt.hpp
(+194 files in other folders)
